src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import "./assets/slick.css";

@layer base {

    html {
        @apply h-full overflow-x-hidden
    }

    body {
        @apply min-h-full overflow-x-hidden flex flex-col text-black
    }

    /* padding-top must be equal to header height before sticky */
    body>main {
        @apply flex-grow pt-24 max-sm:pt-20
    }

    body> :is(header, footer) {
        @apply flex-shrink-0
    }
}

@layer utilities {
    .container {
        @apply mx-auto px-4 max-w-screen-sm sm:max-w-screen-md md:max-w-screen-lg lg:max-w-screen-xl xl:max-w-screen-xl
    }
}

@layer components {
    .search-bar {
        @apply w-[550px] max-lg:w-[300px] max-sm:w-full max-sm:-mt-4 rounded-lg pr-12 relative transition-all border border-darken focus-within:border-primary
    }

    .header-btn {
        @apply flex items-center py-2 pr-4 pl-3 max-sm:p-3 cursor-pointer transition-all hover:text-primary rounded-md
    }

    .modal-backdrop,
    .modal-nested-backdrop {
        @apply z-[50] fixed inset-0 overflow-y-auto flex min-h-full items-center justify-center p-4 text-center bg-black bg-opacity-30
    }

    .modal-dialog,
    .modal-nested-dialog {
        @apply w-full max-w-md text-left transform overflow-hidden rounded-lg bg-white py-10 px-6 sm:px-14 max-sm:pb-6
    }

    .modal-nested-backdrop {
        @apply bg-opacity-50
    }

    .modal-nested-dialog {
        @apply max-w-lg
    }

    .modal-tab-btn {
        @apply flex-grow outline-none cursor-pointer rounded-md py-2 max-sm:text-xs
    }

    .google-btn {
        @apply w-full py-3 border border-darken rounded-md outline-none bg-white text-gray-700 text-sm max-sm:text-xs flex items-center justify-center gap-x-2 font-medium
    }

    .mobile-sidebar {
        @apply md:hidden max-md:flex fixed -right-full top-0 bg-[rgba(255,255,255,.9)] backdrop-blur-sm h-full flex-col z-40 w-60 max-w-full pt-16 items-start p-4 transition-all overflow-auto
    }

    .mobile-sidebar .mobile-sidebar-btn {
        @apply flex items-center py-3 pr-4 pl-3 max-sm:p-3 cursor-pointer transition-all hover:text-primary rounded-md w-full
    }

    .mobile-sidebar.sidebar-show {
        @apply right-0
    }

    .mobile-sidebar .sidebar-close {
        @apply md:hidden absolute top-4 right-3 px-4 py-3 cursor-pointer
    }

    .sidebar-backdrop {
        @apply md:hidden bg-[rgba(0,0,0,0.45)] fixed top-0 left-0 right-0 w-[100vw] h-[100vh] z-30 transition-all opacity-0 pointer-events-none
    }

    .mobile-sidebar.sidebar-show+.sidebar-backdrop {
        @apply lg:hidden pointer-events-auto opacity-100
    }

    .header {
        @apply absolute top-0 left-0 right-0 w-full h-24 max-sm:h-20 border-b border-default bg-white z-50 transition-[height]
    }

    .header.sticky-header {
        @apply animate-[slideDown_0.5s_ease] fixed top-0 left-0 right-0 z-50 h-[4.5rem] max-sm:h-16 shadow-md
    }
}

@keyframes slideDown {
    0% {
        transform: translateY(-100%);
    }

    100% {
        transform: translateY(0);
    }
}

